# CGCourse2023

./: .gitignore
3dparty/glew/include/GL/: eglew.h  glew.h  glxew.h  wglew.h
3dparty/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
3dparty/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
3dparty/glfw/src/: Makefile  cmake_install.cmake
3dparty/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
src/code_0_setup/: helloCGWorld
src/code_0_setup/HelloCGWorld/: CMakeLists.txt  buildProg.sh  helloCGWorld  main.cpp
src/code_0_setup/HelloCGWorld/CMAKE/: CMakeCache.txt  cmake_install.cmake
src/code_0_setup/HelloCGWorld/CMAKE/glfw/: cmake_install.cmake  cmake_uninstall.cmake
src/code_0_setup/HelloCGWorld/CMAKE/glfw/src/: cmake_install.cmake
src/code_0_setup/build-HelloCGWorld-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  helloCGWorld.cbp
src/code_0_setup/build-HelloCGWorld-Desktop-Debug/glfw/: GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/code_0_setup/build-HelloCGWorld-Desktop-Debug/glfw/src/: Makefile  cmake_install.cmake
src/code_1_my_first_triangle/: PROJECT
src/code_1_my_first_triangle/MyFirstTriangle/: CMakeLists.txt  main.cpp
src/code_1_my_first_triangle/build-MyFirstTriangle-Desktop-Debug/: CMakeCache.txt  Makefile  PROJECT.cbp  cmake_install.cmake
src/code_1_my_first_triangle/build-MyFirstTriangle-Desktop-Debug/glfw/: GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/code_3_box2d/: box2DD
src/code_3_box2d/box2d/: CMakeLists.txt  main.cpp
src/code_3_box2d/build-box2d-Desktop-Debug/: CMakeCache.txt  Makefile  box2DD.cbp  box2d.cbp  cmake_install.cmake
src/code_3_box2d/build-box2d-Desktop-Debug/glfw/: GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/code_3_box2d/build-box2d-Desktop-Debug/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake  glm.cbp
src/code_4_my_first_car/: main.cpp  myfirstcar
src/code_4_my_first_car/MyFirstCar/: CMakeLists.txt  main.cpp
src/code_4_my_first_car/build-MyFirstCar-Desktop-Debug/: CMakeCache.txt  Makefile  MyFirstCar.cbp  cmake_install.cmake
src/code_4_my_first_car/build-MyFirstCar-Desktop-Debug/glfw/: GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/code_4_my_first_car/build-MyFirstCar-Desktop-Debug/glm/: Makefile  cmake_install.cmake  glm.cbp
src/code_5_matrix_stack/: main.cpp  matrixstack
src/code_5_matrix_stack/MatrixStack/: CMakeLists.txt  main.cpp
src/code_5_matrix_stack/build-MatrixStack-Desktop-Debug/: CMakeCache.txt  Makefile  MatrixStack.cbp  cmake_install.cmake
src/code_5_matrix_stack/build-MatrixStack-Desktop-Debug/glfw/: GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/code_5_matrix_stack/build-MatrixStack-Desktop-Debug/glm/: Makefile  cmake_install.cmake  glm.cbp
src/code_6_trackball/: trackball
src/code_6_trackball/Trackball/: CMakeLists.txt  main.cpp
src/code_6_trackball/build-Trackball-Desktop-Debug/: CMakeCache.txt  Makefile  Trackball.cbp  cmake_install.cmake
src/code_6_trackball/build-Trackball-Desktop-Debug/glfw/: GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/code_6_trackball/build-Trackball-Desktop-Debug/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake  glm.cbp
src/code_8_picking/: picking
src/code_8_picking/Picking/: CMakeLists.txt  main.cpp
src/code_8_picking/build-Picking-Desktop-Debug/: CMakeCache.txt  Makefile  Picking.cbp  cmake_install.cmake
src/code_8_picking/build-Picking-Desktop-Debug/glfw/: GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/code_8_picking/build-Picking-Desktop-Debug/glm/: Makefile  cmake_install.cmake  glm.cbp
src/common/: matrix_stack.h  simple_shapes.h  simple_shapes_BACKUP_4182.h  simple_shapes_LOCAL_4101.h
(+87 files in other folders)
