cmake_minimum_required(VERSION 3.5)

project(PROJECT LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../")
add_subdirectory("../../../3dparty/glfw" glfw)
include_directories("../../../3dparty/glew/include")
find_library(OpenGL REQUIRED)
add_library(GLEW STATIC IMPORTED)
set_target_properties(GLEW PROPERTIES IMPORTED_LOCATION "../../../3dparty/glew/lib/libGLEW.so")
add_executable(PROJECT main.cpp)
target_link_libraries(PROJECT glfw)
target_link_libraries(PROJECT GLEW)
target_link_libraries(PROJECT OpenGL)
