cmake_minimum_required(VERSION 3.5)

project(MyFirstCar LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../")
add_subdirectory("../../../3dparty/glfw" glfw)
add_subdirectory("../../../3dparty/glm" glm)
include_directories("../../../3dparty/glew/include")
find_library(OpenGL REQUIRED)
add_library(GLEW STATIC IMPORTED)
set_target_properties(GLEW PROPERTIES IMPORTED_LOCATION "../../../3dparty/glew/lib/libGLEW.so")
add_executable(myfirstcar main.cpp)
target_link_libraries(myfirstcar glm)
target_link_libraries(myfirstcar glfw)
target_link_libraries(myfirstcar GLEW)
target_link_libraries(myfirstcar OpenGL)
